<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/settings_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings"
        android:id="@+id/settings_title_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/picture_mode"
        android:id="@+id/picture_mode_text_view"
        android:layout_below="@+id/settings_title_text"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:id="@+id/settings_delete_account_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:id="@+id/settings_toggle_button"
        android:layout_below="@+id/picture_mode_text_view"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
