<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Market"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/market_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Inventory Filter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <ExpandableListView
        android:id="@+id/market_categories_list"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/market_title"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/market_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/market_categories_list"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/location"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/market_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/market_location_text"
        android:inputType="none" />

    <TextView
        android:id="@+id/market_price_range_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/market_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/price_range"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/market_price_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/market_price_range_text"
        android:inputType="none" />

    <Button
        android:id="@+id/market_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/market_price_range_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/search_market" />

</RelativeLayout>
